<resources>
    <string name="app_name">TypingApp</string>
    <string name="stat_nav">Stats</string>
    <string name="type_nav">Type</string>
    <string name="settings_nav">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="settings_subheading">Customize your typing experience</string>
    <string name="about_desc">Improve your typing speed and accuracy with our carefully crafted exercises. Track your progress and compete with yourself to reach new levels.</string>
    <string name="about_title">About Speed Typing</string>
    <string name="about_version">Version 1.0.0</string>
    <string name="audio_haptics"><![CDATA[AUDIO & HAPTICS]]></string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="your_progress">Your Progress</string>
    <string name="journey">Track your typing journey</string>
    <string name="start_typing">Start Typing</string>
</resources>