<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    tools:context=".SettingsFragment"
    android:background="@drawable/mainbg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_subheading"
        android:textColor="#CCC"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <LinearLayout
        android:id="@+id/gameSettingsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheading">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GAME SETTINGS"
            android:textStyle="bold"
            android:textColor="#CCC"
            android:letterSpacing="0.2"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedrect"
            android:backgroundTint="#303042"
            android:paddingVertical="10dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:backgroundTint="#00d2ff"
                    android:padding="8dp"
                    android:layout_marginRight="15dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time"
                        app:tint="@color/white"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Round Duration"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="How long is each round"
                        android:textColor="#CCC"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <Spinner
                    android:id="@+id/time_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/custom_spinner_item"
                    android:background="@null"
                    android:popupBackground="@color/blue_200"
                    />

            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="5dp"
                android:background="#33FFFFFF"
                />
            <LinearLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:backgroundTint="#28a745"
                    android:padding="8dp"
                    android:layout_marginRight="15dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_aim"
                        app:tint="@color/white"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Difficulty"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Determines Word Difficulty"
                        android:textColor="#CCC"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <Spinner
                    android:id="@+id/difficulty_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/custom_spinner_item"
                    android:background="@null"
                    android:popupBackground="@color/blue_200"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audioSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameSettingsList">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_haptics"
            android:textStyle="bold"
            android:textColor="#CCC"
            android:letterSpacing="0.2"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedrect"
            android:backgroundTint="#303042"
            android:paddingVertical="10dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:backgroundTint="#dc3545"
                    android:padding="8dp"
                    android:layout_marginRight="15dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_volume"
                        app:tint="@color/white"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sound Effects"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Feedback and Other SFX"
                        android:textColor="#CCC"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sfxSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:checked="true"
                    />

            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="5dp"
                android:background="#33FFFFFF"
                />
            <LinearLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:backgroundTint="#ffc107"
                    android:padding="8dp"
                    android:layout_marginRight="15dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vibration"
                        app:tint="@color/white"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Vibration"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Haptic Feedback"
                        android:textColor="#CCC"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/hapticSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:checked="true"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notiSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audioSettings">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textStyle="bold"
            android:textColor="#CCC"
            android:letterSpacing="0.2"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedrect"
            android:backgroundTint="#303042"
            android:paddingVertical="10dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:backgroundTint="#26de81"
                    android:padding="8dp"
                    android:layout_marginRight="15dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_noti"
                        app:tint="@color/white"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Daily Reminders"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Get Reminded to Practice"
                        android:textColor="#CCC"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notiSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:checked="true"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/fadedrect"
        android:backgroundTint="#303042"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notiSettings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_desc"
            android:textColor="#DCCC"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="#ACCC"
            android:textSize="13sp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>